// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Business component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="onebusinesscontent"
    style={
      Object {
        "padding": "25px",
      }
    }
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <img
        alt="Business Logo"
        className="img-thumbnail"
        src="businessicon.png"
        style={
          Object {
            "height": "100px",
            "width": "120px",
          }
        }
      />
      <br />
      <h4
        id="details"
      />
    </div>
    <div>
      <h4
        id="details"
      >
        About us
      </h4>
      <div />
    </div>
    <br />
    <div>
      <h4
        id="details"
      >
        Location
      </h4>
    </div>
    <br />
    <div>
      <h4
        id="details"
      >
        Contacts
      </h4>
      +254 721 988 543,+254 799 999 555, companyinfo@gmail.com
    </div>
    <br />
    <div>
      <h4
        id="details"
      >
        Reviews
      </h4>
      <span
        id="rev"
      />
      <div />
      <div
        className="row"
      >
         
        <br />
        <div
          className="col-md-12"
          id="reviews"
        />
      </div>
    </div>
  </div>
  <Footer />
</div>
`;

exports[`Businesses component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="content"
  >
    <div
      className="row"
    >
      <h3
        style={
          Object {
            "color": "maroon",
            "paddingLeft": "20px",
          }
        }
      >
        Featured Businesses
      </h3>
      <div
        className="search"
      >
        <form
          onSubmit={[Function]}
        >
          <span>
            <input
              id="search"
              name="searchname"
              onChange={[Function]}
              placeholder="Search by name..."
              type="text"
            />
          </span>
          <span>
            <button
              id="search"
              style={
                Object {
                  "paddingRight": "20px",
                }
              }
              type="submit"
            >
              <span
                className="glyphicon glyphicon-search"
              />
            </button>
          </span>
        </form>
      </div>
       
      <br />
      <br />
      <div
        className="col-md-4"
      >
        <div
          style={
            Object {
              "float": "right",
              "textAlign": "left",
              "width": "90%",
            }
          }
        >
          <h4>
            Filter Businesses By:
          </h4>
          <br />
          <form
            onSubmit={[Function]}
          >
            <span>
              Category: 
            </span>
            <span>
              <select
                id="filter"
                name="searchcategory"
                onChange={[Function]}
              >
                <option
                  value=""
                >
                  All
                </option>
                <option>
                  Technology
                </option>
                <option>
                  Tourism & Hotels
                </option>
                <option>
                  Health
                </option>
                <option>
                  Education
                </option>
                <option>
                  Finance & Accounting
                </option>
                <option>
                  Farming
                </option>
                <option>
                  Ecommerse
                </option>
                <option>
                  Real Estate
                </option>
                <option>
                  Manufacturing
                </option>
              </select>
            </span>
            <br />
            <br />
            <br />
            <span>
              Location: 
            </span>
            <span>
              <input
                id="filter"
                name="searchlocation"
                onChange={[Function]}
                type="text"
              />
            </span>
             
            <br />
            <br />
            <br />
            <button
              className="btn btn-primary"
              style={
                Object {
                  "float": "right",
                }
              }
              type="submit"
            >
              <span
                className="glyphicon glyphicon-search"
              />
               
            </button>
          </form>
        </div>
      </div>
      <div
        className="col-md-8"
        style={
          Object {
            "paddingLeft": "40px",
          }
        }
      >
        <img
          alt=""
          id="loadpage"
          src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif"
        />
      </div>
    </div>
  </div>
  <Footer />
</div>
`;

exports[`CreateBusinesses component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="col-md-3"
  />
  <div
    className="col-md-6"
    id="businesscontent"
  >
    <h3>
      Create a business
    </h3>
    <br />
    <form
      className="create-business-form"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label>
          Name:
        </label>
        <input
          className="field"
          name="business_name"
          required={true}
          type="text"
        />
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          Location:
        </label>
        <input
          className="field"
          name="location"
          required={true}
          type="text"
        />
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          Category:
        </label>
        <select
          className="field"
          name="category"
          required={true}
        >
          <option>
            Technology
          </option>
          <option>
            Tourism & Hotels
          </option>
          <option>
            Health
          </option>
          <option>
            Education
          </option>
          <option>
            Finance & Accounting
          </option>
          <option>
            Farming
          </option>
          <option>
            Ecommerse
          </option>
          <option>
            Real Estate
          </option>
          <option>
            Manufacturing
          </option>
        </select>
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          About:
        </label>
        <br />
        <br />
        <textarea
          id="textarea"
          name="about"
          required={true}
          rows="8"
        />
      </div>
      <a
        style={
          Object {
            "float": "right",
            "marginTop": "180px",
          }
        }
      >
        <button
          className="btn btn-primary"
          type="submit"
        >
          Create
        </button>
      </a>
    </form>
  </div>
  <div
    className="col-md-3"
  />
  <Footer />
</div>
`;

exports[`Dashboard component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="content"
  >
    <div
      className="row"
    >
      <h3
        style={
          Object {
            "color": "maroon",
            "paddingLeft": "20px",
          }
        }
      >
        My Businesses
      </h3>
      <br />
      <br />
      <div
        className="col-md-1"
      />
      <div
        className="col-md-10"
      >
        <span
          id="rev"
        />
        <br />
        Let your businesses join the WeConnect network
        <Link
          onlyActiveOnIndex={false}
          style={
            Object {
              "paddingLeft": "30px",
              "textDecoration": "none",
            }
          }
          to="/addbusiness"
        >
          <span
            className="glyphicon glyphicon-hand-right"
          />
           Add Business
        </Link>
        <br />
        <br />
        <br />
      </div>
      <div
        className="col-md-1"
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`EditBusiness component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="row"
  >
    <div
      className="col-md-3"
    />
    <div
      className="col-md-6"
      id="businesscontent"
    >
      <h3
        style={
          Object {
            "color": "break",
            "paddingLeft": "20px",
          }
        }
      >
        Edit my business
      </h3>
      <br />
      <form
        className="create-business-form"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label>
            Name:
          </label>
          <input
            className="field"
            name="name"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            Location:
          </label>
          <input
            className="field"
            name="location"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            Category:
          </label>
          <select
            className="field"
            name="category"
            onChange={[Function]}
            required={true}
          >
            <option />
            <option>
              Technology
            </option>
            <option>
              Tourism & Hotels
            </option>
            <option>
              Health
            </option>
            <option>
              Education
            </option>
            <option>
              Finance & Accounting
            </option>
            <option>
              Farming
            </option>
            <option>
              Ecommerse
            </option>
            <option>
              Real Estate
            </option>
            <option>
              Manufacturing
            </option>
          </select>
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            About:
          </label>
          <br />
          <br />
          <textarea
            id="textarea"
            name="about"
            onChange={[Function]}
            required={true}
            rows="8"
            value=""
          />
        </div>
        <br />
        <a
          style={
            Object {
              "float": "right",
              "marginTop": "180px",
            }
          }
        >
          <button
            className="btn btn-primary"
            type="submit"
          >
            Update
          </button>
        </a>
      </form>
    </div>
    <div
      className="col-md-3"
    />
  </div>
  <Footer />
</div>
`;
